@@ -1,5 +1,4 @@
 from zope.interface import implements
-from zope.component import adapts
 from zope.component import getUtility
 
 try:
@@ -7,15 +6,13 @@ try:
 except:
     import simplejson as json
 
-from Products.TinyMCE.interfaces.utility import ITinyMCE
-from Products.TinyMCE.adapters.interfaces.JSONDetails import IJSONDetails
-from Products.CMFCore.interfaces._content import IContentish, IFolderish
-from Products.CMFPlone.interfaces.siteroot import IPloneSiteRoot
-from Products.CMFCore.utils import getToolByName
-from Acquisition import aq_inner
+# Not available in xml.etree
 from elementtree import HTMLTreeBuilder
 
-from Products.CMFPlone.utils import log
+from Products.TinyMCE.adapters.interfaces.JSONDetails import IJSONDetails
+from Products.TinyMCE.interfaces.utility import ITinyMCE
+
+
 class JSONDetails(object):
     """Return details of the current object in JSON"""
     implements(IJSONDetails)
